vpn: add gateway support
